fix(material/list): list truncates on narrow width screens
Fixes bottom padding beneath Antular Components List item with
leading avatar to provide a similar space as exists above the
list item.

Fixes b/291296866

--- a/src/material/list/list.scss
+++ b/src/material/list/list.scss
@@ -176,7 +176,7 @@ a.mdc-list-item--activated {
 .mat-mdc-list-item.mdc-list-item--with-leading-checkbox.mdc-list-item--with-three-lines,
 .mat-mdc-list-item.mdc-list-item--with-leading-icon.mdc-list-item--with-three-lines {
   height: auto;
-  padding-bottom: 8px;
+  padding-bottom: 12px;
 }
 
 .mat-mdc-list-item.mdc-list-item--with-three-lines,
